fix alignment

--- a/src/html/style.css
+++ b/src/html/style.css
@@ -401,8 +401,7 @@ nav.top-nav .menu a.highlight:active {
 }
 
 .section.speakers .list > div > .bio {
-  flex: 0 0 20%;
-  width: 200px;
+  flex-basis: 20%;
   flex-direction: column;
   text-align: center; /* for text elements */
   align-items: center; /* for flex elements */
@@ -424,6 +423,10 @@ nav.top-nav .menu a.highlight:active {
 .section.speakers .list > div > .bio span {
   font-weight: 200;
   margin: 0.5em 0 0 0;
+}
+
+.section.speakers .list > div > article {
+  flex-basis: 80%;
 }
 
 .section.speakers .list > div p {
